--- a/summary_code/cpp/config/makeinclude/makefile.libcomm
+++ b/summary_code/cpp/config/makeinclude/makefile.libcomm
@@ -1,5 +1,5 @@
 ################################################################
-#编译库的makefile模板
+#编译静态库的makefile模板
 ################################################################
 
 ifndef LIB_TARGET
